# mgba

./: CMakeLists.txt
include/mgba/core/: interface.h
src/core/: config.c
src/feature/gui/: gui-config.c  gui-runner.c
src/platform/tinspire/: CMakeLists.txt  CMakeToolchain.txt  binaries.s  common.h  draw.c  draw.h  gui-font.c  keys.c  keys.h  lcd.c  lcd.h  main.c  memory.c
src/util/: vfs.c
src/util/vfs/: vfs-dirent.c
